# ComputerAudioRecognition

./: CMakeLists.txt  Makefile  README.md  goal.txt  temp.txt
src/: Recording.cpp  Recording.h  Train.cpp  Train.h  main.cpp
